--- a/CSS3/estructura_grid.css
+++ b/CSS3/estructura_grid.css
@@ -1,7 +1,97 @@
-.grid{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, auto);
-    gap: 10px;
+* {
+    margin: 0;
+    padding: 0;
 }
 
+body {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #000;
+    background: #e9ecf4;
+}
+
+.grid {
+    width: 95%;
+    max-width: 1200px;
+    margin: 5px auto;
+
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, auto);
+
+    grid-template-areas: 
+        "header header header"
+        "contenido contenido sidebar"
+        "widget1 widget2 widget3"
+        "footer footer footer";
+}
+
+.grid div, .grid header, .grid aside, .grid footer {
+    background: white;
+    padding: 20px;
+}
+
+.grid header {
+    background: #383f4d;
+    color: white;
+    grid-area: header;
+    text-align: center;
+}
+
+.grid aside {
+    background: #af5fdd;
+    color: white;
+    grid-area: sidebar;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.grid .contenido {
+    grid-area: contenido;
+}
+
+.grid .widget {
+    background: #1ee0ed;
+    color: white;
+    height: 100px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.grid .w1 {
+    grid-area: widget1;
+}
+
+.grid .w2 {
+    grid-area: widget2;
+}
+
+
+.grid footer {
+    background: #3a3f4d;
+    color: white;
+    grid-area: footer;
+    text-align: center;
+}
+
+h1 {
+    text-align: center;
+}
+
+@media screen and (max-width: 700px) {
+    .grid {
+        grid-template-areas:
+            "header header header"
+            "contenido contenido sidebar"
+            "widget1 widget2 widget3"
+            "footer footer footer";
+    }
+
+    .grid aside {
+        height: 150px;
+    }
+}
