--- a/Proyecto_final/components/nav_bar.html
+++ b/Proyecto_final/components/nav_bar.html
@@ -3,9 +3,9 @@
     <div class="logo">Farmacia Santiago</div>
     <!--Lista con opciones-->
         <ul class="botones">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="pages/productos_p.html">Productos y precios</a></li>
-            <li><a href="pages/ofertas.html">Ofertas</a></li>
-            <li><a href="pages/acerca.html">Acerca de</a></li>
+            <li><a href="../pages/Inicio.html">Inicio</a></li>
+            <li><a href="../pages/productos_p.html">Productos y precios</a></li>
+            <li><a href="../pages/ofertas.html">Ofertas</a></li>
+            <li><a href="../pages/acerca.html">Acerca de</a></li>
         </ul>
     </div>
